fix: Set background color of HTML to the unfilled places when the window resized, with dark color, its less visible

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 html, body {
   height: 100%;
   overflow: clip;
+  background-color: #0f1010;
 }
 
 body {
